only prevent frontage header from wrapping above a certain width.

--- a/src/assets/stylesheets/frontage.scss
+++ b/src/assets/stylesheets/frontage.scss
@@ -12,7 +12,10 @@
 
 h1 {
   font-family: 'Frontage 3D';
-  white-space: nowrap;
+
+  @media (min-width: 64em) {
+    white-space: nowrap;
+  }
 }
 
 h2, p {
